Add Minify plugin for external deps, consolidate builds