@@ -1,75 +1,69 @@
 
 import org.gradle.api.tasks.testing.logging.TestLogEvent
-import org.gradle.jvm.tasks.Jar
 
 plugins {
+    id("java-library")
     alias(libs.plugins.kotlinJvm)
 }
 
-group = "com.nophasenokill"
+group = "com.nophasenokill.$name"
 version = "0.1.local-dev"
 
 dependencies {
 
-    implementation("com.google.guava:guava:${libs.versions.guava.get()}")
-
     implementation("org.jetbrains.kotlin:kotlin-stdlib")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
 
+    implementation("com.google.guava:guava:${libs.versions.guava.get()}")
+
     implementation(gradleApi())
-    implementation("org.junit.jupiter:junit-jupiter-api:${libs.versions.junit.get()}")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:${libs.versions.junit.get()}")
 
     /*
         These are required, so we don't implicitly load test framework. https://docs.gradle.org/8.7/userguide/upgrading_version_8.html#test_framework_implementation_dependencies
      */
-    implementation("org.junit.jupiter:junit-jupiter:${libs.versions.junit.get()}")
-    implementation("org.junit.platform:junit-platform-launcher:${libs.versions.junitPlatform.get()}")
+    testImplementation("org.junit.jupiter:junit-jupiter:${libs.versions.junit.get()}")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher:${libs.versions.junitPlatform.get()}")
 
     implementation("net.bytebuddy:byte-buddy:${libs.versions.byteBuddy.get()}")
     implementation("net.bytebuddy:byte-buddy-agent:${libs.versions.byteBuddy.get()}")
+    testImplementation("net.bytebuddy:byte-buddy-agent:${libs.versions.byteBuddy.get()}")
+    testImplementation("net.bytebuddy:byte-buddy:${libs.versions.byteBuddy.get()}")
 
 }
 
-tasks.withType(Jar::class.java).configureEach {
-    manifest = java.manifest {
-        manifestContentCharset = "UTF-8"
-        isZip64 = true
+tasks {
+    test {
+
+        // Fixes: https://github.com/gradle/gradle/issues/18647
+        jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
+
+        useJUnitPlatform()
+
+        testLogging.events = setOf(
+            TestLogEvent.STANDARD_OUT,
+            TestLogEvent.STARTED,
+            TestLogEvent.PASSED,
+            TestLogEvent.SKIPPED,
+            TestLogEvent.FAILED,
+            TestLogEvent.STANDARD_OUT,
+            TestLogEvent.STANDARD_ERROR,
+        )
+    }
+}
+
+tasks.jar {
+    manifest {
         attributes(
             "Premain-Class" to "com.nophasenokill.TestExecutionTrackerAgent"
         )
     }
-
-    val file = layout.buildDirectory.file("byte-buddy-manifest.MF")
-
-    doLast {
-        manifest.writeTo(file.get().asFile)
-    }
 }
 
-
-tasks.withType(Test::class.java).configureEach {
-
-    useJUnitPlatform()
-
-    testLogging.events = setOf(
-        TestLogEvent.STARTED,
-        TestLogEvent.PASSED,
-        TestLogEvent.SKIPPED,
-        TestLogEvent.FAILED,
-        TestLogEvent.STANDARD_OUT,
-        TestLogEvent.STANDARD_ERROR,
-    )
-
-    // val agentJar = tasks.jar.get().archiveFile.get().asFile.absolutePath
-
+tasks.withType<Test> {
     val agentJar = tasks.jar.get().archiveFile.get().asFile.absolutePath
     val testClassesDir = sourceSets["test"].output.classesDirs.asFileTree.files
     val testClassPaths = testClassesDir.joinToString(separator = File.pathSeparator) { it.absolutePath }
-
-
-    // val testClassesDir = configurations.runtimeElements.map { it.files.toSet() }
-    // val testClassPaths = testClassesDir.get().joinToString(separator = File.pathSeparator) { it.absolutePath }
-
 
     /*
         --add-opens=java.base/java.lang=ALL-UNNAMED
